# ForgeTick

./: Architecture_Doc.md  MVP_Architecture_Doc.md  README.md  pyproject.toml
src/forgetick.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
