[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgetick"
version = "0.0.1"
description = "Open-source node-based trading framework (placeholder)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [{name = "Florian Schulé"}]